# faad2-rs

./: .gitmodules  Cargo.toml  LICENSE
faad2-sys/: Cargo.toml  build.rs
faad2-sys/src/: lib.rs
libfaad2-sys/: Cargo.toml  build.rs  config.h
libfaad2-sys/src/: lib.rs
src/: lib.rs  main.rs
